# VulkanTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  vcpkg.json
VanK/: CMakeLists.txt
VanK-Editor/: CMakeLists.txt  imgui.ini
VanK-Editor/shaders/: DrawIndirectShader.slang  compile.bat  shader.slang  shaderIO.h  slang.spv  slangfrag.spv  slangvert.spv
VanK-Editor/src/: EditorLayer.cpp  EditorLayer.h  Main.cpp
VanK/src/Platform/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanRendererAPI.cpp  VulkanRendererAPI.h  VulkanShader.cpp  VulkanShader.h  debug_util.h
VanK/src/VanK/: Utils.cpp  Utils.h
VanK/src/VanK/Core/: Application.cpp  Application.h  Event.cpp  Event.h  Layer.cpp  Layer.h  Log.cpp  Log.h  Timer.h  Window.cpp  Window.h  core.h
VanK/src/VanK/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
VanK/src/VanK/Renderer/: Buffer.cpp  Buffer.h  Geometry.cpp  Geometry.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h
main/: Renderer.cpp  Renderer.h  VulkanRenderer.cpp  main.cpp
script/: install_dependencies_windows.bat  setup_windows_build.bat
shaders/: DrawIndirectShader.slang  compile.bat  shader.slang
